--- a/13.jQuery/CSS/theme.css
+++ b/13.jQuery/CSS/theme.css
@@ -7,12 +7,10 @@
 button {
     margin:2em 0.5em;
 }
-article {
-    border-radius:5px;
-}
-.hello {
+
+/*.hello {
     display:none;
-}
+}*/
 .blue {
     color:blue;
 }
